feat: update gps tracking and leaflet map integration